solved the white spaces

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -19,7 +19,8 @@ header {
 
 .navbar-fixed-top {
 	background: rgba(0,0,0,.5);
-	padding: 0 30px;
+	padding: 0;
+	margin: 0;
   -webkit-box-shadow:0px 1px 1px #888888;
   -moz-box-shadow:0px 1px 1px #888888;
   box-shadow: 0px 1px 1px #888888;
